# loxone-prometheus-exporter

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  TESTING.md  config.example.yml  docker-compose-otel.yml  docker-compose.override.yml  docker-compose.yml  inspect_controls.py  loxone_structure.json  otel-collector-config.yaml  prometheus.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  instructions.md
.github/agents/: copilot-instructions.md
.github/workflows/: ci-cd.yml  security.yml
.specify/memory/: constitution.md
specs/001-loxone-metrics-export/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-loxone-metrics-export/checklists/: requirements.md
specs/001-loxone-metrics-export/contracts/: config-schema.md  http-api.openapi.yaml  internal-modules.md
specs/002-opentelemetry-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-opentelemetry-support/checklists/: requirements.md
specs/002-opentelemetry-support/contracts/: config-schema.md  health-metrics.md  otlp-export.md
specs/002-syslog-integration/: spec.md
specs/002-syslog-integration/checklists/: requirements.md
src/loxone_exporter/: __init__.py  __main__.py  config.py  logging.py  loxone_auth.py  loxone_client.py  loxone_protocol.py  metrics.py  otlp_exporter.py  server.py  structure.py
tests/: conftest.py
tests/contract/: test_metrics_endpoint.py  test_otlp_export.py
tests/integration/: mock_miniserver.py  test_loxone_client.py  test_otlp_collector.py
tests/performance/: test_load.py
tests/unit/: test_auth.py  test_auth_extended.py  test_config.py  test_logging.py  test_main.py  test_metrics.py  test_otlp_conversion.py  test_otlp_retry.py  test_protocol.py  test_structure.py
