[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loxone-prometheus-exporter"
version = "0.1.0"
description = "Prometheus exporter for Loxone Miniserver control values"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Loxone Exporter Contributors" },
]

dependencies = [
    "websockets~=16.0",
    "prometheus_client~=0.24",
    "aiohttp~=3.13",
    "PyYAML~=6.0",
    "pycryptodome~=3.23",
    "opentelemetry-sdk~=1.28",
    "opentelemetry-exporter-otlp-proto-grpc~=1.28",
    "opentelemetry-exporter-otlp-proto-http~=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-aiohttp>=1.0",
    "pytest-cov>=6.0",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "contract: marks tests as contract tests",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "Crypto.*",
    "grpc",
    "grpc.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S104", "S105", "S106"]  # Allow assert, test passwords, bind-all in tests
"src/loxone_exporter/config.py" = ["S104"]  # 0.0.0.0 bind is intentional default

[tool.coverage.run]
source = ["loxone_exporter"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ ==",
]
